# APIron

./: Cargo.toml  README.md
src/: cli.rs  main.rs  makeRequest.rs  parseCliArgs.rs  utils.rs
src/apis/: openai.rs
tests/: main.test.rs
